<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SIAB1</string>
    <string name="app_subtitle">Sistem Informasi Asesmen Berintegritas</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="captcha_hint">Jawaban verifikasi</string>
    <string name="login">Masuk</string>
    <string name="security_preparing">Menyiapkan keamanan APK...</string>
    <string name="security_ready">Ujian siap dimulai.</string>
    <string name="security_failed">Gagal menyiapkan keamanan APK. Tutup aplikasi lalu coba lagi.</string>
    <string name="retry">Coba Lagi</string>
    <string name="username_required">Username wajib diisi</string>
    <string name="password_required">Password wajib diisi</string>
    <string name="captcha_required">Jawaban verifikasi wajib diisi</string>
    <string name="exam_submitted">Ujian berhasil dikumpulkan! Anda dapat menutup aplikasi.</string>
    <string name="force_kicked_title">ANDA DIKELUARKAN</string>
    <string name="force_kicked_body">Anda telah dikeluarkan dari ujian oleh pengawas.\nSilakan hubungi pengawas untuk informasi lebih lanjut.</string>
    <string name="exam_cancelled_title">UJIAN DITUNDA</string>
    <string name="exam_cancelled_body">Ujian telah ditunda atau dibatalkan oleh pengawas.\nSilakan hubungi pengawas untuk informasi lebih lanjut.</string>
    <string name="back_home">KEMBALI KE BERANDA</string>
    <string name="image_preview">Preview gambar</string>
    <string name="toggle_password">Tampilkan password</string>
    <string name="connecting">Memverifikasi keamanan...</string>
    <string name="kiosk_warning_title">Sematkan aplikasi ujian</string>
    <string name="kiosk_warning_body">Android belum mengaktifkan sematkan aplikasi. Pilih Coba Lagi lalu setujui dialog sistem agar perpindahan aplikasi dibatasi. Jika perangkat tidak mendukungnya, ujian tetap dapat dilanjutkan dengan proteksi terbatas.</string>
    <string name="continue_limited_protection">Lanjut proteksi terbatas</string>
    <string name="kiosk_limited_active">Ujian berjalan dengan proteksi perangkat terbatas.</string>
</resources>
